--- a/login.html
+++ b/login.html
@@ -33,13 +33,10 @@
       $(endif)
     </div>
     <div>
-      <section
-        class="background-radial-gradient overflow-hidden"
-      
-      >
+      <section class="background-radial-gradient overflow-hidden">
         <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
           <div class="row gx-lg-5 align-items-center mb-5">
-            <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+            <div class="col-lg-6 mb-5 mb-lg-0 z-3">
               <h1
                 class="my-5 display-5 fw-bold ls-tight"
                 style="color: hsl(218, 81%, 95%)"
@@ -49,7 +46,10 @@
                   >Best For Your Business</span
                 >
               </h1>
-              <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+              <p
+                class="mb-4 opacity-70 justify-text"
+                style="color: hsl(218, 81%, 85%)"
+              >
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Temporibus, expedita iusto veniam atque, magni tempora mollitia
                 dolorum consequatur nulla, neque debitis eos reprehenderit quasi
@@ -135,54 +135,359 @@
 
                     <!-- Register buttons -->
                   </form>
-                  <br />$(if trial == 'yes')Guest Login, <a style="color: #FF8080"href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)">Click Here.</a>.$(endif)</div><br />
+                  <br />$(if trial == 'yes')Guest Login,
+                  <a
+                    style="color: #ff8080"
+                    href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)"
+                    >Click Here.</a
+                  >.$(endif)
+                </div>
+                <br />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="overflow-hidden" id="short-profile">
+        <div class="container d-flex justify-content-center align-items-center">
+          <div class="p-5 fs-4 text-primary-emphasis justify-text">
+            <p class="pb-3">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Distinctio dicta atque voluptate aperiam repellendus natus
+              mollitia quam repellat iure sed, ratione quia vel. Molestiae, quia
+              explicabo ea distinctio at rem
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla,
+              ducimus ea fugiat repellendus cupiditate voluptate dolorum.
+              Consequatur, aperiam commodi corrupti et alias odio voluptate
+              magni consectetur ab perspiciatis tempore eaque, culpa eius,
+              doloremque doloribus porro mollitia omnis repudiandae officiis
+              minus quis sed? Atque voluptas modi sint accusamus neque quo
+              ipsum! <span id="dots">...</span>
+            </p>
+            <div id="more">
+              <p class="pb-3">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Distinctio dicta atque voluptate aperiam repellendus natus
+                mollitia quam repellat iure sed, ratione quia vel. Molestiae,
+                quia explicabo ea distinctio at rem.
+              </p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla,
+                ducimus ea fugiat repellendus cupiditate voluptate dolorum.
+                Consequatur, aperiam commodi corrupti et alias odio voluptate
+                magni consectetur ab perspiciatis tempore eaque, culpa eius,
+                doloremque doloribus porro mollitia omnis repudiandae officiis
+                minus quis sed? Atque voluptas modi sint accusamus neque quo
+                ipsum!
+              </p>
+            </div>
+            <a
+              onclick="myFunction()"
+              class="text-decoration-none fs-6"
+              style="color: #2ab4c1"
+              id="myBtn"
+              href="#short-profile"
+            >
+              Read more
+            </a>
+          </div>
+        </div>
+      </section>
+      <section
+        style="background-color: #f4fbfb"
+        class="d-flex align-items-center justify-content-center"
+      >
+        <div
+          class="container m-5 p-5 rounded-5 position-relative"
+          style="background-color: #053b50"
+        >
+          <div
+            id="box1"
+            style="background-color: #176b87"
+            class="position-absolute z-1 rounded-circle"
+          ></div>
+          <div class="row d-flex align-items-center">
+            <div class="col position-relative">
+              <div
+                id="carouselExampleFade"
+                class="carousel slide carousel-fade"
+              >
+                <div class="carousel-inner">
+                  <div
+                    class="carousel-item active d-flex justify-content-center position-relative z-1"
+                  >
+                    <img
+                      src="https://www.worldphoto.org/sites/default/files/default-media/Piercy.jpg"
+                      class="rounded-5"
+                      alt="..."
+                      id="cr-image"
+                    />
+                  </div>
+                  <div
+                    class="carousel-item d-flex justify-content-center position-relative z-1"
+                  >
+                    <img
+                      src="https://live.staticflickr.com/65535/52279468376_97aab013eb_w.jpg"
+                      class="rounded-5"
+                      alt="..."
+                      id="cr-image"
+                    />
+                  </div>
+                  <div
+                    class="carousel-item d-flex justify-content-center position-relative z-1"
+                  >
+                    <img
+                      src="https://images.unsplash.com/photo-1688407063687-a211f7c2a0d8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHx8&w=1000&q=80"
+                      class="rounded-5"
+                      alt="..."
+                      id="cr-image"
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleFade"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleFade"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+              <div id="wave1" class="position-absolute z-0"></div>
+              <div id="wave2" class="position-absolute z-0"></div>
+              <div id="wave3" class="position-absolute z-0"></div>
+              <img
+                src="img/wave.png"
+                class="position-absolute z-0"
+                id="wave-static"
+                alt="wave"
+              />
+            </div>
+
+            <div class="col text-white">
+              <h1 class="display-3 fw-bold py-5">VISI</h1>
+              <p class="fs-4 justify-text">
+                Menjadi bank digital pilihan utama masyarakat
+              </p>
+              <h1 class="display-3 fw-bold py-5">MISI</h1>
+              <p class="fs-4 justify-text">
+                Memahami beragam kebutuhan nasabah dan memberikan layanan
+                finansial yang tepat demi tercapainya kepuasan optimal bagi
+                nasabah, dengan memanfaatkan teknologi tepat guna Memberikan
+                nilai tambah bagi para pemangku kepentingan
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div style="background-color: #176b87">
+          <div>
+            <h1 class="display-6 fw-bold text-center pt-5 text-white">
+              STRUKTUR ORGANISASI
+            </h1>
+          </div>
+          <div class="text-center">
+            <div
+              id="carouselExampleAutoplaying"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="img/so (1).png"
+                    id="cr-image-oragnisasi"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img src="img/so 2.png" id="cr-image-oragnisasi" alt="..." />
+                </div>
+                <div class="carousel-item">
+                  <img src="img/so 3.png" id="cr-image-oragnisasi" alt="..." />
+                </div>
+              </div>
+              <!--
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+              -->
+              <!--button custom-->
+              <div class="d-flex justify-content-center pb-5">
+                <div class="mx-5 rounded-circle border border-light">
+                  <button
+                    class="btn rounded-circle border-3"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                </div>
+                <div class="mx-5 rounded-circle border border-light">
+                  <button
+                    class="btn rounded-circle border-3"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="overflow-hidden" style="height: 100vh" hidden>
+      <section>
         <div class="container">
-          <div class="p-5 fs-4 text-primary-emphasis">
-            <p class="pb-3">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Distinctio dicta atque voluptate aperiam repellendus natus
-              mollitia quam repellat iure sed, ratione quia vel. Molestiae, quia
-              explicabo ea distinctio at rem.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla,
-              ducimus ea fugiat repellendus cupiditate voluptate dolorum.
-              Consequatur, aperiam commodi corrupti et alias odio voluptate
-              magni consectetur ab perspiciatis tempore eaque, culpa eius,
-              doloremque doloribus porro mollitia omnis repudiandae officiis
-              minus quis sed? Atque voluptas modi sint accusamus neque quo
-              ipsum!
-            </p>
-            <p class="pb-3">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Distinctio dicta atque voluptate aperiam repellendus natus
-              mollitia quam repellat iure sed, ratione quia vel. Molestiae, quia
-              explicabo ea distinctio at rem.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla,
-              ducimus ea fugiat repellendus cupiditate voluptate dolorum.
-              Consequatur, aperiam commodi corrupti et alias odio voluptate
-              magni consectetur ab perspiciatis tempore eaque, culpa eius,
-              doloremque doloribus porro mollitia omnis repudiandae officiis
-              minus quis sed? Atque voluptas modi sint accusamus neque quo
-              ipsum!
-            </p>
+          <h1 class="display-5 fw-bold pt-5" style="color: #176b87">
+            Tim Kami
+          </h1>
+          <p class="justify-text fs-3 py-4 lh-lg">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla,
+            ducimus ea fugiat repellendus cupiditate voluptate dolorum.
+            Consequatur, aperiam commodi corrupti et alias odio voluptate magni
+            consectetur ab perspiciatis tempore eaque, culpa eius, doloremque
+            doloribus porro mollitia omnis repudiandae officiis minus quis sed?
+            Atque voluptas modi sint accusamus neque quo ipsum!
+          </p>
+          <div class="d-flex justify-content-center py-5">
+            <img src="img/so (4).png" alt="" id="image-static-team" />
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h1 class="display-5 fw-bold pt-5" style="color: #176b87">
+            Pimpinan Perusahaan
+          </h1>
+          <h1 class="display-6 fw-medium">Direktur</h1>
+
+          <div class="py-5 row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h1 class="display-6 fw-medium">Komisaris</h1>
+
+          <div class="py-5 row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img src="img/profile.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
     </div>
-    
-    <!-- Section: Design Block -->
-
-    <!-- Section: Design Block -->
 
     <script type="text/javascript">
       <!--
@@ -190,5 +495,22 @@
       //-->
     </script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script>
+      function myFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Read more";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Read less";
+          moreText.style.display = "inline";
+        }
+      }
+    </script>
   </body>
 </html>
